# Project Management/src/projectManagement.API.Models/CreateUser.cs
@@ -1,0 +1,200 @@
+/*
+ * Project Management API
+ *
+ * Project Management API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using projectManagement.API.Converters;
+
+namespace projectManagement.API.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public partial class CreateUser : IEquatable<CreateUser>
+    {
+        /// <summary>
+        /// Gets or Sets FirstName
+        /// </summary>
+        /* <example>John</example> */
+        [Required]
+        [DataMember(Name="firstName", EmitDefaultValue=false)]
+        public string FirstName { get; set; }
+
+        /// <summary>
+        /// Gets or Sets LastName
+        /// </summary>
+        /* <example>Doe</example> */
+        [Required]
+        [DataMember(Name="lastName", EmitDefaultValue=false)]
+        public string LastName { get; set; }
+
+        /// <summary>
+        /// Gets or Sets UserName
+        /// </summary>
+        /* <example>JohnDoe@123</example> */
+        [Required]
+        [DataMember(Name="userName", EmitDefaultValue=false)]
+        public string UserName { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Email
+        /// </summary>
+        /* <example>johnDoe@gmail.com</example> */
+        [Required]
+        [DataMember(Name="email", EmitDefaultValue=false)]
+        public string Email { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Role
+        /// </summary>
+        /* <example>TSE</example> */
+        [DataMember(Name="role", EmitDefaultValue=false)]
+        public string Role { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Password
+        /// </summary>
+        /* <example>password123</example> */
+        [Required]
+        [DataMember(Name="password", EmitDefaultValue=false)]
+        public string Password { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class CreateUser {\n");
+            sb.Append("  FirstName: ").Append(FirstName).Append("\n");
+            sb.Append("  LastName: ").Append(LastName).Append("\n");
+            sb.Append("  UserName: ").Append(UserName).Append("\n");
+            sb.Append("  Email: ").Append(Email).Append("\n");
+            sb.Append("  Role: ").Append(Role).Append("\n");
+            sb.Append("  Password: ").Append(Password).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((CreateUser)obj);
+        }
+
+        /// <summary>
+        /// Returns true if CreateUser instances are equal
+        /// </summary>
+        /// <param name="other">Instance of CreateUser to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(CreateUser other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    FirstName == other.FirstName ||
+                    FirstName != null &&
+                    FirstName.Equals(other.FirstName)
+                ) && 
+                (
+                    LastName == other.LastName ||
+                    LastName != null &&
+                    LastName.Equals(other.LastName)
+                ) && 
+                (
+                    UserName == other.UserName ||
+                    UserName != null &&
+                    UserName.Equals(other.UserName)
+                ) && 
+                (
+                    Email == other.Email ||
+                    Email != null &&
+                    Email.Equals(other.Email)
+                ) && 
+                (
+                    Role == other.Role ||
+                    Role != null &&
+                    Role.Equals(other.Role)
+                ) && 
+                (
+                    Password == other.Password ||
+                    Password != null &&
+                    Password.Equals(other.Password)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (FirstName != null)
+                    hashCode = hashCode * 59 + FirstName.GetHashCode();
+                    if (LastName != null)
+                    hashCode = hashCode * 59 + LastName.GetHashCode();
+                    if (UserName != null)
+                    hashCode = hashCode * 59 + UserName.GetHashCode();
+                    if (Email != null)
+                    hashCode = hashCode * 59 + Email.GetHashCode();
+                    if (Role != null)
+                    hashCode = hashCode * 59 + Role.GetHashCode();
+                    if (Password != null)
+                    hashCode = hashCode * 59 + Password.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(CreateUser left, CreateUser right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(CreateUser left, CreateUser right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
